assets/stylesheets/common/discourse-reactions.scss
html.no-select {
  -webkit-touch-callout: none; /* Disables long-touch menu */
  -webkit-user-select: none; /* Disable text selection (for Webkit) */
  user-select: none; /* Disable text selection (standard syntax) */
}

.discourse-reactions-list {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-left: 0.25em;
  pointer-events: none;

  .reactions {
    display: flex;
    align-items: center;
    position: relative;

    .fake-reaction {
      position: absolute;
      left: calc(50% - 0.65em);
    }

    .reaction {
      display: flex;
      align-items: center;
      margin: 0 0.1em;

      &:nth-of-type(1n + 4) {
        display: none;
      }

      .emoji {
        width: 1.1em;
        height: 1.1em;
      }
    }
  }

  .users {
    font-size: $font-down-1;
    color: $primary-medium;
    margin-left: 0.5em;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    visibility: visible;
    opacity: 1;
  }
}

.discourse-reactions-picker {
  visibility: hidden;
  display: none;
  padding-bottom: 15px;
  z-index: z("usercard") - 2;
  position: relative;

  &.is-expanded {
    animation: 0.33s fadeIn;
    animation-fill-mode: forwards;
    display: flex;
  }

  .container {
    padding: 0.25em;
    box-shadow: shadow("card");
    background-color: $secondary;
    z-index: 1;
  }

  .pickable-reaction {
    // TODO fix this in core
    padding: 0.25em !important;
    margin: 0.25em !important;
    border: 1px solid transparent !important;
    cursor: not-allowed;

    &:not(.can-undo) {
      filter: grayscale(1);
    }

    &.can-undo {
      cursor: pointer;
    }

    &.is-used {
      border-color: $tertiary-low !important;
    }

    &:hover {
      background: $primary-very-low;
    }
  }
}

.discourse-reactions-state-panel {
  min-width: 235px;
  max-width: 275px;
  visibility: hidden;
  display: none;
  padding-bottom: 15px;
  z-index: z("usercard") - 2;
  position: relative;

  &.is-expanded {
    animation: 0.33s fadeIn;
    animation-fill-mode: forwards;
    display: flex;
  }

  .container {
    box-shadow: shadow("card");
    background-color: $secondary;
    display: flex;
    flex-direction: column;
    z-index: 1;
  }

  .counters {
    border-bottom: 1px solid $primary-low;
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5em;
    grid-row-gap: 0.5em;
    padding: 0.5em;
    margin-bottom: auto;
  }

  .users {
    display: grid;
    grid-template-columns: repeat(8, max-content);
    grid-column-gap: 0.5em;
    grid-row-gap: 0.5em;
    padding: 0.5em;
    margin-bottom: auto;

    .trigger-user-card {
      display: flex;

      align-items: center;
      justify-content: center;
    }
  }
}

.discourse-reactions-state-panel-reaction {
  cursor: pointer;
  display: flex;
  align-items: center;

  &:last-child {
    margin: 0;
  }

  &.is-displayed {
    .count {
      font-weight: bold;
      color: $primary-high;
    }
  }

  &:not(.is-displayed) {
    filter: grayscale(1);

    &:hover {
      filter: grayscale(0);
    }
  }

  .count {
    margin-right: 0.5em;
    color: $primary-medium;
  }
}

.discourse-reactions-actions {
  display: inline-flex;

  .double-button {
    margin-right: 0px !important;
  }

  &:not(.user-has-positively-reacted) {
    .discourse-reactions-reaction-button {
      &:hover {
        .d-icon {
          color: $love;
        }

        background: $primary-low;
      }
    }
  }

  &.user-has-positively-reacted {
    .discourse-reactions-reaction-button {
      .d-icon {
        color: $primary-low-mid;
      }

      &:hover {
        .d-icon {
          color: $love;
        }

        background: $primary-low;
      }
    }
  }

  &:not(.can-toggle-positive-reaction) {
    .discourse-reactions-reaction-button {
      cursor: default;
    }

    &:hover {
      .discourse-reactions-reaction-button {
        background: none;

        .d-icon {
          color: $love;
        }
      }
    }
  }

  &.can-toggle-positive-reaction {
    .discourse-reactions-reaction-button {
      cursor: pointer;
    }
  }
}

.discourse-reactions-reaction-button {
  cursor: default;
  display: flex;
  touch-action: none;

  .btn-toggle-reaction {
    outline: none;
    pointer-events: none;
    background: none !important;
  }

  &:hover {
    background: $primary-low;
  }
}

.discourse-reactions-counter {
  display: flex;

  .reactions-counter {
    display: flex;
    align-items: center;
    margin-left: 0.25em;
    margin-right: 0.5em;
    pointer-events: none;
  }

  &:hover {
    background: $primary-low;

    .emoji {
      filter: grayscale(0) !important;
    }

    .reactions-counter {
      color: $primary !important;
    }
  }
}

nav.post-controls .actions {
  display: inline-flex;
}

body.discourse-reactions-test-topic {
  .actions > .double-button {
    display: none !important;
  }
}

